it from source control: http://www.mediawiki.org/wiki/Download_from_SVN

== Changes since 1.15.4 ==

* (bug xxxxx) Fixed Cache-Control headers sent from API modules, to protect
  user privacy in the case where an attacker can access the wiki through the
  same HTTP proxy as a logged-in user.
* Fixed a minor cookie header parsing issue causing incorrect Cache-Control 
  headers to be sent.

== Changes since 1.15.3 ==

* (bug 23534) Fixed SQL query error in API list=allusers.
* (bug 23371) Fixed CSRF vulnerability in "e-mail me my password", "create 
  account" and "create by e-mail" features of [[Special:Userlogin]]
* (bug 23687) Fixed XSS vulnerability affecting IE clients only, due to a CSS 
  validation issue.

=== Changes since 1.15.2 ===

* (bug 22828) Fixed deletion on SQLite.
* (bug 23076) Fixed login CSRF vulnerability. Logins now require a token to 
  be submitted along with the user name and password.

=== Changes since 1.15.1 ===

* The installer now includes a check for a data corruption issue with certain
  versions of libxml2 2.7 and PHP earlier than 5.2.9, and also for a PHP bug 
  present in the official release of PHP 5.3.1.
* (bug 20239) MediaWiki:Imagemaxsize does not contain anymore a <br /> tag which
  was displayed to the user
* (bug 21150) SQLite no longer raise an error when deleting files
* (bug 20880) Fixed updater failure on SQLite backend
* upgrade1_5.php now requires to be run --update option to prevent confusion
* Fixed a CSS validation issue which allowed external images to be included 
  into wikis where that is disallowed by configuration.
* Fixed a data leakage vulnerability for private wikis using img_auth.php or 
  similar image access authentication schemes. Check user permissions before 
  streaming out scaled images from thumb.php.

=== Changes since 1.15.0 ===

* Fixed fatal errors for unusual file repository configurations, such as 
  ForeignAPIRepo.